Angular external env variables

--- a/bookstore-client/Dockerfile
+++ b/bookstore-client/Dockerfile
@@ -7,8 +7,19 @@ RUN npm run build --prod
 
 FROM nginx:alpine AS image
 RUN rm -rf /usr/share/nginx/html/*
+
+# Install envsubst (part of gettext)
+RUN apk add --no-cache gettext
+
 COPY --from=build /app/dist/book-store/browser /usr/share/nginx/html
-COPY --from=build /app/src/assets /usr/share/nginx/html/assets
+
+# Add custom env template
+COPY --from=build /app/src/assets/env.template.json /usr/share/nginx/html/assets/env.template.json
+
+# Add entrypoint script
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
 EXPOSE 80
-# When the container starts, replace the env.js with values from environment variables
-CMD ["/bin/sh",  "-c",  "envsubst < /usr/share/nginx/html/assets/env.template.js > /usr/share/nginx/html/assets/env.js && exec nginx -g 'daemon off;'"]
+
+ENTRYPOINT ["/entrypoint.sh"]
