--- a/books-rest-api/Dockerfile
+++ b/books-rest-api/Dockerfile
@@ -5,7 +5,7 @@ COPY . .
 RUN chmod +x gradle
 RUN gradle bootJar --no-daemon
 # setup image
-FROM openjdk:21 AS image
+FROM eclipse-temurin:21-jdk-alpine AS image
 EXPOSE 8080
 RUN mkdir /app
 COPY --from=build /workspace/build/libs/*.jar /app/app.jar
